# yys-drop-statistics

./: devenv.nix  devenv.yaml  readme.md
app1/: Cargo.toml  game_resources.db
app1/src/: main.rs
back/: Cargo.nix  Cargo.toml  default.nix  game_resources.db
back/src/: main.rs
fr/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
fr/nginx/: default.conf
fr/src/: App.vue
front/: .pnp.cjs  .yarnrc.yml  default.nix  index.html  package.json  yarn-project.nix
vue3-frontend/: package-lock.json  package.json  vite.config.ts
vue3-frontend/src/: App.vue  main.ts
