[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.3.5", features = ["cors"] }
hyper = "0.14"

# SQLite 用于数据存储
rusqlite = { version = "0.26", features = ["bundled"] }